# mouseless

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
bundle/: manifest.json
scripts/: install.sh  release.sh
src/: batch.rs  error.rs  main.rs  server.rs  types.rs
src/capture/: screenshot.rs  zoom.rs
src/input/: thread.rs
