[package]
name = "mouseless"
version = "0.1.1"
edition = "2024"
description = "A Rust MCP server for macOS desktop control — screenshots, mouse, keyboard, app management. Supports Streamable HTTP and stdio transports."
license = "MIT"
repository = "https://github.com/smithery-ai/mouseless"
homepage = "https://github.com/smithery-ai/mouseless"
readme = "README.md"
keywords = ["mcp", "macos", "automation", "screenshot", "accessibility"]
categories = ["command-line-utilities", "os::macos-apis"]
exclude = ["dist/", "scripts/", "target/", "assets/", "bundle/"]

[dependencies]
# MCP protocol
rmcp = { version = "1.4", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }

# HTTP server
axum = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Screenshot capture
xcap = "0.9"

# Mouse/keyboard input
enigo = { version = "0.6", features = ["serde"] }

# Image processing
image = "0.25"

# Encoding
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# macOS display info
core-graphics = "0.24"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
